Fixing contrast issues and removed light-mode

--- a/themes/hugo-theme-learn/static/css/atom-one-dark-reasonable.css
+++ b/themes/hugo-theme-learn/static/css/atom-one-dark-reasonable.css
@@ -15,7 +15,7 @@ Original One Dark Syntax theme from https://github.com/atom/one-dark-syntax
   border-radius: 5px;
 }
 .hljs-keyword, .hljs-operator {
-  color: #F92672;
+  color: #F9A4C3;
 }
 .hljs-pattern-match {
   color: #F92672;
